file(GLOB PROJ_EXCLU_MAIN_SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)
list(REMOVE_ITEM  PROJ_EXCLU_MAIN_SRC ${PROJECT_SOURCE_DIR}/src/main.cpp)
include_directories(GLOB ${PROJECT_SOURCE_DIR}/src)
add_executable(rwlock_race test_rwlock_race.cpp)
add_test(NAME rw_lock COMMAND rwlock_race )
set_tests_properties(rw_lock PROPERTIES TIMEOUT 10)

add_executable(simd test_simd.cpp)
add_test(NAME simd COMMAND simd )
add_executable(network test_network.cpp ${PROJ_EXCLU_MAIN_SRC})
add_test(NAME network COMMAND network)
