file(GLOB PROJ_EXCLU_MAIN_SRC ${PROJECT_SOURCE_DIR}/src/*.cpp)
list(REMOVE_ITEM  PROJ_EXCLU_MAIN_SRC ${PROJECT_SOURCE_DIR}/src/main.cpp)
link_libraries(hwy)
add_executable(rwlock_race test_rwlock_race.cpp)
add_test(NAME rw_lock COMMAND rwlock_race )
set_tests_properties(rw_lock PROPERTIES TIMEOUT 10)

add_executable(simd test_simd.cpp)
add_test(NAME simd COMMAND simd )
add_executable(network test_network.cpp ${PROJ_EXCLU_MAIN_SRC})
add_test(NAME network COMMAND network)
add_executable(lexer test_lexer.cpp ${PROJ_EXCLU_MAIN_SRC})
add_test(NAME lexer COMMAND lexer)
add_definitions(-D__TEST_LEXER_INPUT_PATH="${PROJECT_SOURCE_DIR}/test/test_lexer.in")
